# brewsim

./: .gitignore  CMakeLists.txt
assets/: model.mtl  modelpchigh.mtl  modelwii.mtl
src/: main.cpp  robot_physics.cpp  robot_physics.h
src/gfx/: 3ds_citro3d.cpp  pc_opengl.cpp  renderer.cpp  renderer.h  wii_gx.cpp  wiiu_gx2.cpp
